# fd-jira

./: .gitignore  Cargo.toml  LICENSE  README.md  readme.md
fsharp/: .gitignore  Program.fs  fd-jira.sln  jiratool.fsproj  jiratool.sln  paket.dependencies
fsharp/fd-jira/: Async.fs  Program.fs  Result.fs  cli.fs  config.json  database.fs  fons-cli.fs  jiraApi.fs  jiratool.fsproj  jsonParsing.fs  jsonSerialization.fs  paket.references  parser.fs  prelude.fs  scratch.fsx  types.fs
fsharp/fd-jira/examples/: fields.json  issue-subtask.json
rust/: .gitignore  README.md
rust/samples/: full-issue.json  sample-issue.json
rust/src/: credentials.rs  jira_api.rs  jira_sqlite.rs  main.rs
samples/: custom_field_meta.json  sample-issue-search.json
src/: credentials.rs  jira_api.rs  jira_sqlite.rs  jira_types.rs  main.rs
