[package]
name = "fd-jira"
version = "0.1.0"
authors = ["Eric Vincent <eric@efvincent.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curl="0.4.23"
serde = { version = "1.0.99", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde", "rustc-serialize"] }
urlencoding = "1.0.0"