[package]
name = "fd-jira"
version = "0.1.0"
authors = ["Eric Vincent <eric@efvincent.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curl="0.4.23"
console = "0.9.0"
structopt = "0.3"
serde = { version = "1.0.100", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde", "rustc-serialize"] }
urlencoding = "1.0.0"
rusqlite = { version = "0.20.0",features = ["bundled"]}
crossterm = "0.11.1"